Bug 1295818: Port nsStyleChangeList to modern C++. r=heycam

MozReview-Commit-ID: 2j1h1AYkFql